--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,11 @@ authors = [{name = "Arkhan Lewis", email = "arkhan.lewis@uwaterloo.com"}]
 dependencies = [
     "fastapi[standard]",
     "uvicorn",
-    "psycopg2",
-    "boto3"
+    "boto3",
+    "psycopg2-binary",
+    "requests",
+    "google-auth",
+    "google-auth-oauthlib"
 
 ]
 requires-python = ">=3.8"
