--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ dependencies = [
     "psycopg2-binary",
     "requests",
     "google-auth",
-    "google-auth-oauthlib"
+    "google-auth-oauthlib",
+    "torch"
 
 ]
 requires-python = ">=3.8"
