--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ decorator==5.2.1
 docplex==2.29.245
 executing==2.2.0
 google-auth==2.40.2
+google-auth-oauthlib==1.2.0
 gurobipy==12.0.2
 idna==3.10
 ipykernel==6.29.5
@@ -35,9 +36,11 @@ pyasn1_modules==0.4.2
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pyzmq==26.4.0
+qdrant-client==1.9.0
 requests==2.32.3
 rsa==4.9.1
 s3transfer==0.13.0
+sentence-transformers==2.5.1
 six==1.17.0
 stack-data==0.6.3
 tornado==6.5.1
