--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,6 @@ requires-python = ">=3.8"
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["app", "tagging", "retrieval", "summaries"]
