--- a/mobile/app.json
+++ b/mobile/app.json
@@ -19,6 +19,9 @@
       "bundleIdentifier": "com.billboard.app"
     },
     "android": {
+      "permissions": [
+        "DETECT_SCREEN_CAPTURE"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -30,4 +33,3 @@
     }
   }
 }
-
