--- a/mobile/package.json
+++ b/mobile/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "type-check": "tsc --noEmit"
   },
@@ -33,4 +33,3 @@
   },
   "private": true
 }
-
