--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ google-auth-oauthlib==1.2.0
 gurobipy==12.0.2
 idna==3.10
 ipykernel==6.29.5
-ipython==9.3.0
+ipython
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 jmespath==1.0.1
