--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,20 +10,28 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "react-native-screens": "~3.29.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-reanimated": "~3.6.1",
+    "amazon-cognito-identity-js": "^6.3.16",
     "axios": "^1.6.2",
+    "expo": "~50.0.0",
+    "expo-asset": "~9.0.2",
+    "expo-constants": "~15.4.6",
+    "expo-file-system": "~16.0.9",
+    "expo-font": "~11.10.3",
+    "expo-keep-awake": "~12.8.2",
     "expo-linear-gradient": "~12.7.2",
-    "@expo/vector-icons": "^14.0.0"
+    "expo-modules-core": "~1.11.14",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
