--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ platformdirs==4.3.8
 prompt_toolkit==3.0.51
 psutil==7.0.0
 psycopg2==2.9.10
+python-jose[cryptography]==3.3.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyasn1==0.6.1
