--- a/mobile/package.json
+++ b/mobile/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "12.3.2",
     "@types/react": "~18.2.45",
     "@types/react-native": "~0.73.0",
     "typescript": "~5.3.3"
